Add enterprise-grade features to MySQL Client Pro v2.0
Major new features:
- Data editing: Insert, update, delete rows directly in table view
- Import/Export: CSV, Excel, and SQL format support with batch processing
- Backup & Restore: Full database backup and restore with progress tracking
- Table Designer: Visual table structure designer with all MySQL data types
- SQL History: Auto-save last 500 queries with search functionality
- Query Favorites: Save and organize frequently used queries
- Execution Plan Analyzer: View EXPLAIN plans and performance analysis
- Theme Support: Light and dark themes with automatic preference saving
- AES-256 Encryption: Secure password storage using industry-standard encryption

Enhanced services:
- ExportService: Export data to CSV/Excel/SQL with format optimization
- ImportService: Import from CSV/Excel with batch processing (1000 rows/batch)
- BackupService: Full database backup with structure and data
- ExecutionPlanService: Query optimization analysis
- QueryHistoryService: History and favorites management

New UI components:
- EnhancedMainWindow: Integrated all features with comprehensive menu system
- DataEditorPane: Table data editor with CRUD operations
- TableDesignerDialog: Visual table creation with column definitions

Utilities:
- EncryptionUtil: AES-256 encryption with backward compatibility
- ThemeManager: Theme switching and persistence

Updated dependencies:
- Apache POI 5.2.5: Excel file processing
- Apache Commons CSV 1.10.0: CSV file handling
- Jasypt 1.9.3: AES-256 encryption
- ControlsFX 11.1.2: Advanced UI controls

Technical improvements:
- Connection pool optimization (HikariCP configuration)
- Async operations for all DB tasks
- Progress listeners for long-running operations
- Error handling and user feedback
- Resource management and cleanup

Documentation:
- Comprehensive README with all features documented
- Usage guide for each major feature
- Troubleshooting section
- Performance tuning guide